--- a/homepage.html
+++ b/homepage.html
@@ -5,7 +5,7 @@
 	</head>
 		<body>
 
-		<h1>Tyler's Hub</h1>
+		<h1>The Hub</h1>
 		<hr>
 		<ul>
 			<li><a href="entertainment.html">Entertainment Links</a></li>
