Added course links and tables for other sections

--- a/hacking_resources.html
+++ b/hacking_resources.html
@@ -15,5 +15,76 @@
 			<li>Books I want to get or have</li>
 			<li>Miscellaneous resources (YouTube channels, podcasts, etc)</li>
 		</ul>
+		<h2>Hacking Courses</h2>
+		<hr>
+		<ul>
+			<li><a href="https://portswigger.net/web-security/all-labs"></a>PortSwigger Labs</li>
+			<li><a href="https://tryhackme.com/paths"></a>TryHackMe</li>
+			<li><a href="https://www.offensive-security.com/labs/individual/"></a>Proving Grounds</li>
+			<li><a href="https://portal.offensive-security.com/labs/play"></a>Offensive Security Labs</li>
+			<li><a href="https://opensecuritytraining.info/Training.html"></a>Locally Hosted Classes</li>
+			<li><a href="https://ctflearn.com/"></a>CTF Learn</li>
+			<li><a href="https://overthewire.org/wargames/"></a>OverTheWire: Wargames</li>
+			<li><a href="https://maxkersten.nl/binary-analysis-course/"></a>Binary Analysis Course</li>
+			<li><a href="https://pentesterlab.com/"></a>PenTesterLab</li>
+			<li><a href="https://my.ine.com/"></a>INE</li>
+			<li><a href="https://www.cybrary.it/"></a>Cybrary</li>
+		</ul>
+		<h2>Hacking Forums</h2>
+		<hr>
+		<ul>
+			<li><a href=""></a></li>
+			<li><a href=""></a></li>
+			<li><a href=""></a></li>
+			<li><a href=""></a></li>
+		</ul>
+		<h2>Capture The Flag</h2>
+		<hr>
+		<ul>
+			<li><a href=""></a></li>
+			<li><a href=""></a></li>
+			<li><a href=""></a></li>
+			<li><a href=""></a></li>
+		</ul>
+		<h2>Hacking Resources</h2>
+		<hr>
+		<ul>
+			<li><a href=""></a></li>
+			<li><a href=""></a></li>
+			<li><a href=""></a></li>
+			<li><a href=""></a></li>
+		</ul>
+		<h2>Hacking Databases</h2>
+		<hr>
+		<ul>
+			<li><a href=""></a></li>
+			<li><a href=""></a></li>
+			<li><a href=""></a></li>
+			<li><a href=""></a></li>
+		</ul>
+		<h2>Open Source Intelligence</h2>
+		<hr>
+		<ul>
+			<li><a href=""></a></li>
+			<li><a href=""></a></li>
+			<li><a href=""></a></li>
+			<li><a href=""></a></li>
+		</ul>
+		<h2>YouTube Channels</h2>
+		<hr>
+		<ul>
+			<li><a href=""></a></li>
+			<li><a href=""></a></li>
+			<li><a href=""></a></li>
+			<li><a href=""></a></li>
+		</ul>
+		<h2>Books</h2>
+		<hr>
+		<ul>
+			<li><a href=""></a></li>
+			<li><a href=""></a></li>
+			<li><a href=""></a></li>
+			<li><a href=""></a></li>
+		</ul>
 	</body>
 </html>
