Added content to most of the rest of the lists

--- a/hacking_resources.html
+++ b/hacking_resources.html
@@ -33,50 +33,90 @@
 		<h2>Hacking Forums</h2>
 		<hr>
 		<ul>
-			<li><a href=""></a></li>
-			<li><a href=""></a></li>
-			<li><a href=""></a></li>
-			<li><a href=""></a></li>
+			<li><a href="http://www.hacking-tutorial.com/"></a>Ethical Hacking Tutorials, Tips, and Tricks</li>
+			<li><a href="https://hackaday.com/"></a>Hackaday, Fresh Hacks Everyday</li>
+			<li><a href="https://www.hitb.org/"></a>Hackinthebox, Keeping Knowledge Free</li>
+			<li><a href="https://www.hellboundhackers.org/"></a>Hellbound Hackers</li>
+			<li><a href="http://www.phrack.org/"></a>.:: Phrack Magazine ::.</li>
 		</ul>
 		<h2>Capture The Flag</h2>
 		<hr>
 		<ul>
-			<li><a href=""></a></li>
-			<li><a href=""></a></li>
-			<li><a href=""></a></li>
-			<li><a href=""></a></li>
+			<li><a href="https://app.hackthebox.eu/home"></a>HackTheBox</li>
+			<li><a href="https://www.hackthissite.org/user/themes"></a>HackThisSite</li>
+			<li><a href="https://microcorruption.com/"></a>MicroCorruption</li>
+			<li><a href="https://play.picoctf.org/practice"></a>PicoCTF</li>
+			<li><a href="https://pwnable.tw/"></a>pwnable.tw</li>
+			<li><a href="http://pwnable.kr/"></a>pwnable.kr</li>
+			<li><a href="http://reversing.kr/"></a>Reversing.kr</li>
+			<li><a href="http://hax.tor.hu/welcome/"></a>Hax.tor</li>
+			<li><a href="https://w3challs.com/"></a>W3Challs</li>
+			<li><a href="https://io.netgarage.org/"></a>NetGarage</li>
+			<li><a href="https://ringzer0ctf.com/"></a>RingZer0</li>
+			<li><a href="http://counterhack.net/Counter_Hack/Challenges.html"></a>Hacker Challenges</li>
+			<li><a href="https://www.vulnhub.com/"></a>VulnHub</li>
+			<li><a href="http://ctf.komodosec.com/"></a>Application Security Challenge</li>
+			<li><a href="https://hackerone.com/bug-bounty-programs"></a>HackerOne</li>
 		</ul>
 		<h2>Hacking Resources</h2>
 		<hr>
 		<ul>
-			<li><a href=""></a></li>
-			<li><a href=""></a></li>
-			<li><a href=""></a></li>
-			<li><a href=""></a></li>
+			<li><a href="http://www.jsfuck.com/"></a>JSFuck</li>
+			<li><a href="https://utf-8.jp/public/aaencode.html"></a>aaencode</li>
+			<li><a href="https://gchq.github.io/CyberChef/"></a>CyberChef</li>
+			<li><a href="https://owasp.org/www-community/xss-filter-evasion-cheatsheet"></a>XSS Filter Evasion Sheet</li>
+			<li><a href="https://pwnadventure.com/"></a>Pwnie Island</li>
+			<li><a href="https://beefproject.com/"></a>BeEF</li>
+			<li><a href="https://www.first.org/cvss/calculator/3.1"></a>CVSS</li>
+			<li><a href="https://github.com/swisskyrepo/PayloadsAllTheThings/blob/master/Methodology%20and%20Resources/Reverse%20Shell%20Cheatsheet.md"></a>Reverse Shell Cheat Sheet</li>
+			<li><a href="https://lolbas-project.github.io/"></a>LOLBAS</li>
+			<li><a href="https://www.virustotal.com/gui/home/upload"></a>VirusTotal</li>
+			<li><a href="https://x0rb3l.github.io/Cyber-Bookmarks/bookmarks.html"></a>x0rb3l's Cyber Bookmarks</li>
+			<li><a href="https://gist.github.com/HarmJ0y/184f9822b195c52dd50c379ed3117993"></a>PowerView</li>
+			<li><a href="https://0xffsec.com/handbook/notes/"></a>0xffsec Handbook</li>
+			<li><a href="https://gtfobins.github.io/"></a>GTFOBins</li>
+			<li><a href="https://pauljerimy.com/security-certification-roadmap/"></a>Security Certifications Roadmap</li>
+			<li><a href="https://github.com/ytisf/thezoo"></a>theZoo, malware library</li>
+			<li><a href="https://crackstation.net/"></a>CrackStation</li>
+			<li><a href="https://github.com/gtworek/Priv2Admin"></a>Priv2Admin</li>
+			<li><a href="https://mha.azurewebsites.net/"></a>Message Header Analyzer</li>
+			<li><a href="https://app.any.run/"></a>Interactive Online Malware Analysis Sandbox</li>
+			<li><a href="https://hashcat.net/wiki/doku.php?id=example_hashes"></a>Hashcat example hashes</li>
 		</ul>
 		<h2>Hacking Databases</h2>
 		<hr>
 		<ul>
-			<li><a href=""></a></li>
-			<li><a href=""></a></li>
-			<li><a href=""></a></li>
-			<li><a href=""></a></li>
+			<li><a href="https://cve.mitre.org/"></a>CVE</li>
+			<li><a href="https://nvd.nist.gov/"></a>NVD</li>
+			<li><a href="https://seclists.org/"></a>Seclists</li>
+			<li><a href="https://www.exploit-db.com/"></a>Exploit Database</li>
+			<li><a href="https://www.soldierx.com/hdb/"></a>Hacker Database</li>
+			<li><a href="https://attack.mitre.org/groups/"></a>Hacker Groups</li>
+			<li><a href="https://attack.mitre.org/"></a>MITRE ATT&CK</li>
 		</ul>
 		<h2>Open Source Intelligence</h2>
 		<hr>
 		<ul>
-			<li><a href=""></a></li>
-			<li><a href=""></a></li>
-			<li><a href=""></a></li>
-			<li><a href=""></a></li>
+			<li><a href="https://www.shodan.io/"></a>Shodan</li>
+			<li><a href="https://www.iana.org/assignments/service-names-port-numbers/service-names-port-numbers.xhtml"></a>Service Name and Transport Protocol Port Registry</li>
+			<li><a href="https://www.faxvin.com/license-plate-lookup"></a>License Plate Lookup</li>
+			<li><a href="https://www.arin.net/"></a>American Registry for Internet Numbers</li>
 		</ul>
 		<h2>YouTube Channels</h2>
 		<hr>
 		<ul>
-			<li><a href=""></a></li>
-			<li><a href=""></a></li>
-			<li><a href=""></a></li>
-			<li><a href=""></a></li>
+			<li><a href="https://www.youtube.com/c/ippsec"></a>IppSec</li>
+			<li><a href="https://www.youtube.com/c/thehackerish"></a>thehackerish</li>
+			<li><a href="https://www.youtube.com/user/DeviantOllam"></a>DeviantOllam</li>
+			<li><a href="https://www.youtube.com/c/TheHatedOne"></a>The Hated One</li>
+			<li><a href="https://www.youtube.com/c/hak5"></a>Hak5</li>
+			<li><a href="https://www.youtube.com/c/HackerSploit"></a>HackerSploit</li>
+			<li><a href="https://www.youtube.com/c/TheCyberMentor"></a>The Cyber Mentor</li>
+			<li><a href="https://www.youtube.com/c/PracticalNetworking"></a>Practical Networking</li>
+			<li><a href="https://www.youtube.com/c/Tib3rius"></a>Tib3rius</li>
+			<li><a href="https://www.youtube.com/c/ShannonMorse"></a>Shannon Morse</li>
+			<li><a href="https://www.youtube.com/c/RedTeamVillage"></a>Red Team Village</li>
+			<li><a href="https://www.youtube.com/c/BlueTeamVillage"></a>Blue Team Village</li>
 		</ul>
 		<h2>Books</h2>
 		<hr>
