--- a/homepage.html
+++ b/homepage.html
@@ -6,6 +6,7 @@
 		<body>
 
 		<h1>The Hub</h1>
+		<br>Clearly I have no idea what I'm doing :)
 		<hr>
 		<ul>
 			<li><a href="entertainment.html">Entertainment Links</a></li>
