So THAT'S why the hyperlinks weren't working...

--- a/hacking_resources.html
+++ b/hacking_resources.html
@@ -18,105 +18,105 @@
 		<h2>Hacking Courses</h2>
 		<hr>
 		<ul>
-			<li><a href="https://portswigger.net/web-security/all-labs"></a>PortSwigger Labs</li>
-			<li><a href="https://tryhackme.com/paths"></a>TryHackMe</li>
-			<li><a href="https://www.offensive-security.com/labs/individual/"></a>Proving Grounds</li>
-			<li><a href="https://portal.offensive-security.com/labs/play"></a>Offensive Security Labs</li>
-			<li><a href="https://opensecuritytraining.info/Training.html"></a>Locally Hosted Classes</li>
-			<li><a href="https://ctflearn.com/"></a>CTF Learn</li>
-			<li><a href="https://overthewire.org/wargames/"></a>OverTheWire: Wargames</li>
-			<li><a href="https://maxkersten.nl/binary-analysis-course/"></a>Binary Analysis Course</li>
-			<li><a href="https://pentesterlab.com/"></a>PenTesterLab</li>
-			<li><a href="https://my.ine.com/"></a>INE</li>
-			<li><a href="https://www.cybrary.it/"></a>Cybrary</li>
+			<li><a href="https://portswigger.net/web-security/all-labs">PortSwigger Labs</a></li>
+			<li><a href="https://tryhackme.com/paths">TryHackMe</a></li>
+			<li><a href="https://www.offensive-security.com/labs/individual/">Proving Grounds</a></li>
+			<li><a href="https://portal.offensive-security.com/labs/play">Offensive Security Labs</a></li>
+			<li><a href="https://opensecuritytraining.info/Training.html">Locally Hosted Classes</a></li>
+			<li><a href="https://ctflearn.com/">CTF Learn</a></li>
+			<li><a href="https://overthewire.org/wargames/">OverTheWire: Wargames</a></li>
+			<li><a href="https://maxkersten.nl/binary-analysis-course/">Binary Analysis Course</a></li>
+			<li><a href="https://pentesterlab.com/">PenTesterLab</a></li>
+			<li><a href="https://my.ine.com/">INE</a></li>
+			<li><a href="https://www.cybrary.it/">Cybrary</a></li>
 		</ul>
 		<h2>Hacking Forums</h2>
 		<hr>
 		<ul>
-			<li><a href="http://www.hacking-tutorial.com/"></a>Ethical Hacking Tutorials, Tips, and Tricks</li>
-			<li><a href="https://hackaday.com/"></a>Hackaday, Fresh Hacks Everyday</li>
-			<li><a href="https://www.hitb.org/"></a>Hackinthebox, Keeping Knowledge Free</li>
-			<li><a href="https://www.hellboundhackers.org/"></a>Hellbound Hackers</li>
-			<li><a href="http://www.phrack.org/"></a>.:: Phrack Magazine ::.</li>
+			<li><a href="http://www.hacking-tutorial.com/">Ethical Hacking Tutorials, Tips, and Tricks</a></li>
+			<li><a href="https://hackaday.com/">Hackaday, Fresh Hacks Everyday</a></li>
+			<li><a href="https://www.hitb.org/">Hackinthebox, Keeping Knowledge Free</a></li>
+			<li><a href="https://www.hellboundhackers.org/">Hellbound Hackers</a></li>
+			<li><a href="http://www.phrack.org/">.:: Phrack Magazine ::.</a></li>
 		</ul>
 		<h2>Capture The Flag</h2>
 		<hr>
 		<ul>
-			<li><a href="https://app.hackthebox.eu/home"></a>HackTheBox</li>
-			<li><a href="https://www.hackthissite.org/user/themes"></a>HackThisSite</li>
-			<li><a href="https://microcorruption.com/"></a>MicroCorruption</li>
-			<li><a href="https://play.picoctf.org/practice"></a>PicoCTF</li>
-			<li><a href="https://pwnable.tw/"></a>pwnable.tw</li>
-			<li><a href="http://pwnable.kr/"></a>pwnable.kr</li>
-			<li><a href="http://reversing.kr/"></a>Reversing.kr</li>
-			<li><a href="http://hax.tor.hu/welcome/"></a>Hax.tor</li>
-			<li><a href="https://w3challs.com/"></a>W3Challs</li>
-			<li><a href="https://io.netgarage.org/"></a>NetGarage</li>
-			<li><a href="https://ringzer0ctf.com/"></a>RingZer0</li>
-			<li><a href="http://counterhack.net/Counter_Hack/Challenges.html"></a>Hacker Challenges</li>
-			<li><a href="https://www.vulnhub.com/"></a>VulnHub</li>
-			<li><a href="http://ctf.komodosec.com/"></a>Application Security Challenge</li>
-			<li><a href="https://hackerone.com/bug-bounty-programs"></a>HackerOne</li>
+			<li><a href="https://app.hackthebox.eu/home">HackTheBox</a></li>
+			<li><a href="https://www.hackthissite.org/user/themes">HackThisSite</a></li>
+			<li><a href="https://microcorruption.com/">MicroCorruption</a></li>
+			<li><a href="https://play.picoctf.org/practice">PicoCTF</a></li>
+			<li><a href="https://pwnable.tw/">pwnable.tw</a></li>
+			<li><a href="http://pwnable.kr/">pwnable.kr</a></li>
+			<li><a href="http://reversing.kr/">Reversing.kr</a></li>
+			<li><a href="http://hax.tor.hu/welcome/">Hax.tor</a></li>
+			<li><a href="https://w3challs.com/">W3Challs</a></li>
+			<li><a href="https://io.netgarage.org/">NetGarage</a></li>
+			<li><a href="https://ringzer0ctf.com/">RingZer0</a></li>
+			<li><a href="http://counterhack.net/Counter_Hack/Challenges.html">Hacker Challenges</a></li>
+			<li><a href="https://www.vulnhub.com/">VulnHub</a></li>
+			<li><a href="http://ctf.komodosec.com/">Application Security Challenge</a></li>
+			<li><a href="https://hackerone.com/bug-bounty-programs">HackerOne</a></li>
 		</ul>
 		<h2>Hacking Resources</h2>
 		<hr>
 		<ul>
-			<li><a href="http://www.jsfuck.com/"></a>JSFuck</li>
-			<li><a href="https://utf-8.jp/public/aaencode.html"></a>aaencode</li>
-			<li><a href="https://gchq.github.io/CyberChef/"></a>CyberChef</li>
-			<li><a href="https://owasp.org/www-community/xss-filter-evasion-cheatsheet"></a>XSS Filter Evasion Sheet</li>
-			<li><a href="https://pwnadventure.com/"></a>Pwnie Island</li>
-			<li><a href="https://beefproject.com/"></a>BeEF</li>
-			<li><a href="https://www.first.org/cvss/calculator/3.1"></a>CVSS</li>
-			<li><a href="https://github.com/swisskyrepo/PayloadsAllTheThings/blob/master/Methodology%20and%20Resources/Reverse%20Shell%20Cheatsheet.md"></a>Reverse Shell Cheat Sheet</li>
-			<li><a href="https://lolbas-project.github.io/"></a>LOLBAS</li>
-			<li><a href="https://www.virustotal.com/gui/home/upload"></a>VirusTotal</li>
-			<li><a href="https://x0rb3l.github.io/Cyber-Bookmarks/bookmarks.html"></a>x0rb3l's Cyber Bookmarks</li>
-			<li><a href="https://gist.github.com/HarmJ0y/184f9822b195c52dd50c379ed3117993"></a>PowerView</li>
-			<li><a href="https://0xffsec.com/handbook/notes/"></a>0xffsec Handbook</li>
-			<li><a href="https://gtfobins.github.io/"></a>GTFOBins</li>
-			<li><a href="https://pauljerimy.com/security-certification-roadmap/"></a>Security Certifications Roadmap</li>
-			<li><a href="https://github.com/ytisf/thezoo"></a>theZoo, malware library</li>
-			<li><a href="https://crackstation.net/"></a>CrackStation</li>
-			<li><a href="https://github.com/gtworek/Priv2Admin"></a>Priv2Admin</li>
-			<li><a href="https://mha.azurewebsites.net/"></a>Message Header Analyzer</li>
-			<li><a href="https://app.any.run/"></a>Interactive Online Malware Analysis Sandbox</li>
-			<li><a href="https://hashcat.net/wiki/doku.php?id=example_hashes"></a>Hashcat example hashes</li>
+			<li><a href="http://www.jsfuck.com/">JSFuck</a></li>
+			<li><a href="https://utf-8.jp/public/aaencode.html">aaencode</a></li>
+			<li><a href="https://gchq.github.io/CyberChef/">CyberChef</a></li>
+			<li><a href="https://owasp.org/www-community/xss-filter-evasion-cheatsheet">XSS Filter Evasion Sheet</a></li>
+			<li><a href="https://pwnadventure.com/">Pwnie Island</a></li>
+			<li><a href="https://beefproject.com/">BeEF</a></li>
+			<li><a href="https://www.first.org/cvss/calculator/3.1">CVSS</a></li>
+			<li><a href="https://github.com/swisskyrepo/PayloadsAllTheThings/blob/master/Methodology%20and%20Resources/Reverse%20Shell%20Cheatsheet.md">Reverse Shell Cheat Sheet</a></li>
+			<li><a href="https://lolbas-project.github.io/">LOLBAS</a></li>
+			<li><a href="https://www.virustotal.com/gui/home/upload">VirusTotal</a></li>
+			<li><a href="https://x0rb3l.github.io/Cyber-Bookmarks/bookmarks.html">x0rb3l's Cyber Bookmarks</a></li>
+			<li><a href="https://gist.github.com/HarmJ0y/184f9822b195c52dd50c379ed3117993">PowerView</a></li>
+			<li><a href="https://0xffsec.com/handbook/notes/">0xffsec Handbook</a></li>
+			<li><a href="https://gtfobins.github.io/">GTFOBins</a></li>
+			<li><a href="https://pauljerimy.com/security-certification-roadmap/">Security Certifications Roadmap</a></li>
+			<li><a href="https://github.com/ytisf/thezoo">theZoo, malware library</a></li>
+			<li><a href="https://crackstation.net/">CrackStation</a></li>
+			<li><a href="https://github.com/gtworek/Priv2Admin">Priv2Admin</a></li>
+			<li><a href="https://mha.azurewebsites.net/">Message Header Analyzer</a></li>
+			<li><a href="https://app.any.run/">Interactive Online Malware Analysis Sandbox</a></li>
+			<li><a href="https://hashcat.net/wiki/doku.php?id=example_hashes">Hashcat example hashes</a></li>
 		</ul>
 		<h2>Hacking Databases</h2>
 		<hr>
 		<ul>
-			<li><a href="https://cve.mitre.org/"></a>CVE</li>
-			<li><a href="https://nvd.nist.gov/"></a>NVD</li>
-			<li><a href="https://seclists.org/"></a>Seclists</li>
-			<li><a href="https://www.exploit-db.com/"></a>Exploit Database</li>
-			<li><a href="https://www.soldierx.com/hdb/"></a>Hacker Database</li>
-			<li><a href="https://attack.mitre.org/groups/"></a>Hacker Groups</li>
-			<li><a href="https://attack.mitre.org/"></a>MITRE ATT&CK</li>
+			<li><a href="https://cve.mitre.org/">CVE</a></li>
+			<li><a href="https://nvd.nist.gov/">NVD</a></li>
+			<li><a href="https://seclists.org/">Seclists</a></li>
+			<li><a href="https://www.exploit-db.com/">Exploit Database</a></li>
+			<li><a href="https://www.soldierx.com/hdb/">Hacker Database</a></li>
+			<li><a href="https://attack.mitre.org/groups/">Hacker Groups</a></li>
+			<li><a href="https://attack.mitre.org/">MITRE ATT&CK</a></li>
 		</ul>
 		<h2>Open Source Intelligence</h2>
 		<hr>
 		<ul>
-			<li><a href="https://www.shodan.io/"></a>Shodan</li>
-			<li><a href="https://www.iana.org/assignments/service-names-port-numbers/service-names-port-numbers.xhtml"></a>Service Name and Transport Protocol Port Registry</li>
-			<li><a href="https://www.faxvin.com/license-plate-lookup"></a>License Plate Lookup</li>
-			<li><a href="https://www.arin.net/"></a>American Registry for Internet Numbers</li>
+			<li><a href="https://www.shodan.io/">Shodan</a></li>
+			<li><a href="https://www.iana.org/assignments/service-names-port-numbers/service-names-port-numbers.xhtml">Service Name and Transport Protocol Port Registry</a></li>
+			<li><a href="https://www.faxvin.com/license-plate-lookup">License Plate Lookup</a></li>
+			<li><a href="https://www.arin.net/">American Registry for Internet Numbers</a></li>
 		</ul>
 		<h2>YouTube Channels</h2>
 		<hr>
 		<ul>
-			<li><a href="https://www.youtube.com/c/ippsec"></a>IppSec</li>
-			<li><a href="https://www.youtube.com/c/thehackerish"></a>thehackerish</li>
-			<li><a href="https://www.youtube.com/user/DeviantOllam"></a>DeviantOllam</li>
-			<li><a href="https://www.youtube.com/c/TheHatedOne"></a>The Hated One</li>
-			<li><a href="https://www.youtube.com/c/hak5"></a>Hak5</li>
-			<li><a href="https://www.youtube.com/c/HackerSploit"></a>HackerSploit</li>
-			<li><a href="https://www.youtube.com/c/TheCyberMentor"></a>The Cyber Mentor</li>
-			<li><a href="https://www.youtube.com/c/PracticalNetworking"></a>Practical Networking</li>
-			<li><a href="https://www.youtube.com/c/Tib3rius"></a>Tib3rius</li>
-			<li><a href="https://www.youtube.com/c/ShannonMorse"></a>Shannon Morse</li>
-			<li><a href="https://www.youtube.com/c/RedTeamVillage"></a>Red Team Village</li>
-			<li><a href="https://www.youtube.com/c/BlueTeamVillage"></a>Blue Team Village</li>
+			<li><a href="https://www.youtube.com/c/ippsec">IppSec</a></li>
+			<li><a href="https://www.youtube.com/c/thehackerish">thehackerish</a></li>
+			<li><a href="https://www.youtube.com/user/DeviantOllam">DeviantOllam</a></li>
+			<li><a href="https://www.youtube.com/c/TheHatedOne">The Hated One</a></li>
+			<li><a href="https://www.youtube.com/c/hak5">Hak5</a></li>
+			<li><a href="https://www.youtube.com/c/HackerSploit">HackerSploit</a></li>
+			<li><a href="https://www.youtube.com/c/TheCyberMentor">The Cyber Mentor</a></li>
+			<li><a href="https://www.youtube.com/c/PracticalNetworking">Practical Networking</a></li>
+			<li><a href="https://www.youtube.com/c/Tib3rius">Tib3rius</a></li>
+			<li><a href="https://www.youtube.com/c/ShannonMorse">Shannon Morse</a></li>
+			<li><a href="https://www.youtube.com/c/RedTeamVillage">Red Team Village</a></li>
+			<li><a href="https://www.youtube.com/c/BlueTeamVillage">Blue Team Village</a></li>
 		</ul>
 		<h2>Books</h2>
 		<hr>
