Links open in new tabs

--- a/hacking_resources.html
+++ b/hacking_resources.html
@@ -18,113 +18,113 @@
 		<h2>Hacking Courses</h2>
 		<hr>
 		<ul>
-			<li><a href="https://portswigger.net/web-security/all-labs">PortSwigger Labs</a></li>
-			<li><a href="https://tryhackme.com/paths">TryHackMe</a></li>
-			<li><a href="https://www.offensive-security.com/labs/individual/">Proving Grounds</a></li>
-			<li><a href="https://portal.offensive-security.com/labs/play">Offensive Security Labs</a></li>
-			<li><a href="https://opensecuritytraining.info/Training.html">Locally Hosted Classes</a></li>
-			<li><a href="https://ctflearn.com/">CTF Learn</a></li>
-			<li><a href="https://overthewire.org/wargames/">OverTheWire: Wargames</a></li>
-			<li><a href="https://maxkersten.nl/binary-analysis-course/">Binary Analysis Course</a></li>
-			<li><a href="https://pentesterlab.com/">PenTesterLab</a></li>
-			<li><a href="https://my.ine.com/">INE</a></li>
-			<li><a href="https://www.cybrary.it/">Cybrary</a></li>
+			<li><a href="https://portswigger.net/web-security/all-labs" target="_blank" rel="noopener noreferrer">PortSwigger Labs</a></li>
+			<li><a href="https://tryhackme.com/paths" target="_blank" rel="noopener noreferrer">TryHackMe</a></li>
+			<li><a href="https://www.offensive-security.com/labs/individual/" target="_blank" rel="noopener noreferrer">Proving Grounds</a></li>
+			<li><a href="https://portal.offensive-security.com/labs/play" target="_blank" rel="noopener noreferrer">Offensive Security Labs</a></li>
+			<li><a href="https://opensecuritytraining.info/Training.html" target="_blank" rel="noopener noreferrer">Locally Hosted Classes</a></li>
+			<li><a href="https://ctflearn.com/" target="_blank" rel="noopener noreferrer">CTF Learn</a></li>
+			<li><a href="https://overthewire.org/wargames/" target="_blank" rel="noopener noreferrer">OverTheWire: Wargames</a></li>
+			<li><a href="https://maxkersten.nl/binary-analysis-course/" target="_blank" rel="noopener noreferrer">Binary Analysis Course</a></li>
+			<li><a href="https://pentesterlab.com/" target="_blank" rel="noopener noreferrer">PenTesterLab</a></li>
+			<li><a href="https://my.ine.com/" target="_blank" rel="noopener noreferrer">INE</a></li>
+			<li><a href="https://www.cybrary.it/" target="_blank" rel="noopener noreferrer">Cybrary</a></li>
 		</ul>
 		<h2>Hacking Forums</h2>
 		<hr>
 		<ul>
-			<li><a href="http://www.hacking-tutorial.com/">Ethical Hacking Tutorials, Tips, and Tricks</a></li>
-			<li><a href="https://hackaday.com/">Hackaday, Fresh Hacks Everyday</a></li>
-			<li><a href="https://www.hitb.org/">Hackinthebox, Keeping Knowledge Free</a></li>
-			<li><a href="https://www.hellboundhackers.org/">Hellbound Hackers</a></li>
-			<li><a href="http://www.phrack.org/">.:: Phrack Magazine ::.</a></li>
+			<li><a href="http://www.hacking-tutorial.com/" target="_blank" rel="noopener noreferrer">Ethical Hacking Tutorials, Tips, and Tricks</a></li>
+			<li><a href="https://hackaday.com/" target="_blank" rel="noopener noreferrer">Hackaday, Fresh Hacks Everyday</a></li>
+			<li><a href="https://www.hitb.org/" target="_blank" rel="noopener noreferrer">Hackinthebox, Keeping Knowledge Free</a></li>
+			<li><a href="https://www.hellboundhackers.org/" target="_blank" rel="noopener noreferrer">Hellbound Hackers</a></li>
+			<li><a href="http://www.phrack.org/" target="_blank" rel="noopener noreferrer">.:: Phrack Magazine ::.</a></li>
 		</ul>
 		<h2>Capture The Flag</h2>
 		<hr>
 		<ul>
-			<li><a href="https://app.hackthebox.eu/home">HackTheBox</a></li>
-			<li><a href="https://www.hackthissite.org/user/themes">HackThisSite</a></li>
-			<li><a href="https://microcorruption.com/">MicroCorruption</a></li>
-			<li><a href="https://play.picoctf.org/practice">PicoCTF</a></li>
-			<li><a href="https://pwnable.tw/">pwnable.tw</a></li>
-			<li><a href="http://pwnable.kr/">pwnable.kr</a></li>
-			<li><a href="http://reversing.kr/">Reversing.kr</a></li>
-			<li><a href="http://hax.tor.hu/welcome/">Hax.tor</a></li>
-			<li><a href="https://w3challs.com/">W3Challs</a></li>
-			<li><a href="https://io.netgarage.org/">NetGarage</a></li>
-			<li><a href="https://ringzer0ctf.com/">RingZer0</a></li>
-			<li><a href="http://counterhack.net/Counter_Hack/Challenges.html">Hacker Challenges</a></li>
-			<li><a href="https://www.vulnhub.com/">VulnHub</a></li>
-			<li><a href="http://ctf.komodosec.com/">Application Security Challenge</a></li>
-			<li><a href="https://hackerone.com/bug-bounty-programs">HackerOne</a></li>
+			<li><a href="https://app.hackthebox.eu/home" target="_blank" rel="noopener noreferrer">HackTheBox</a></li>
+			<li><a href="https://www.hackthissite.org/user/themes" target="_blank" rel="noopener noreferrer">HackThisSite</a></li>
+			<li><a href="https://microcorruption.com/" target="_blank" rel="noopener noreferrer">MicroCorruption</a></li>
+			<li><a href="https://play.picoctf.org/practice" target="_blank" rel="noopener noreferrer">PicoCTF</a></li>
+			<li><a href="https://pwnable.tw/" target="_blank" rel="noopener noreferrer">pwnable.tw</a></li>
+			<li><a href="http://pwnable.kr/" target="_blank" rel="noopener noreferrer">pwnable.kr</a></li>
+			<li><a href="http://reversing.kr/" target="_blank" rel="noopener noreferrer">Reversing.kr</a></li>
+			<li><a href="http://hax.tor.hu/welcome/" target="_blank" rel="noopener noreferrer">Hax.tor</a></li>
+			<li><a href="https://w3challs.com/" target="_blank" rel="noopener noreferrer">W3Challs</a></li>
+			<li><a href="https://io.netgarage.org/" target="_blank" rel="noopener noreferrer">NetGarage</a></li>
+			<li><a href="https://ringzer0ctf.com/" target="_blank" rel="noopener noreferrer">RingZer0</a></li>
+			<li><a href="http://counterhack.net/Counter_Hack/Challenges.html" target="_blank" rel="noopener noreferrer">Hacker Challenges</a></li>
+			<li><a href="https://www.vulnhub.com/" target="_blank" rel="noopener noreferrer">VulnHub</a></li>
+			<li><a href="http://ctf.komodosec.com/" target="_blank" rel="noopener noreferrer">Application Security Challenge</a></li>
+			<li><a href="https://hackerone.com/bug-bounty-programs" target="_blank" rel="noopener noreferrer">HackerOne</a></li>
 		</ul>
 		<h2>Hacking Resources</h2>
 		<hr>
 		<ul>
-			<li><a href="http://www.jsfuck.com/">JSFuck</a></li>
-			<li><a href="https://utf-8.jp/public/aaencode.html">aaencode</a></li>
-			<li><a href="https://gchq.github.io/CyberChef/">CyberChef</a></li>
-			<li><a href="https://owasp.org/www-community/xss-filter-evasion-cheatsheet">XSS Filter Evasion Sheet</a></li>
-			<li><a href="https://pwnadventure.com/">Pwnie Island</a></li>
-			<li><a href="https://beefproject.com/">BeEF</a></li>
-			<li><a href="https://www.first.org/cvss/calculator/3.1">CVSS</a></li>
-			<li><a href="https://github.com/swisskyrepo/PayloadsAllTheThings/blob/master/Methodology%20and%20Resources/Reverse%20Shell%20Cheatsheet.md">Reverse Shell Cheat Sheet</a></li>
-			<li><a href="https://lolbas-project.github.io/">LOLBAS</a></li>
-			<li><a href="https://www.virustotal.com/gui/home/upload">VirusTotal</a></li>
-			<li><a href="https://x0rb3l.github.io/Cyber-Bookmarks/bookmarks.html">x0rb3l's Cyber Bookmarks</a></li>
-			<li><a href="https://gist.github.com/HarmJ0y/184f9822b195c52dd50c379ed3117993">PowerView</a></li>
-			<li><a href="https://0xffsec.com/handbook/notes/">0xffsec Handbook</a></li>
-			<li><a href="https://gtfobins.github.io/">GTFOBins</a></li>
-			<li><a href="https://pauljerimy.com/security-certification-roadmap/">Security Certifications Roadmap</a></li>
-			<li><a href="https://github.com/ytisf/thezoo">theZoo, malware library</a></li>
-			<li><a href="https://crackstation.net/">CrackStation</a></li>
-			<li><a href="https://github.com/gtworek/Priv2Admin">Priv2Admin</a></li>
-			<li><a href="https://mha.azurewebsites.net/">Message Header Analyzer</a></li>
-			<li><a href="https://app.any.run/">Interactive Online Malware Analysis Sandbox</a></li>
-			<li><a href="https://hashcat.net/wiki/doku.php?id=example_hashes">Hashcat example hashes</a></li>
+			<li><a href="http://www.jsfuck.com/" target="_blank" rel="noopener noreferrer">JSFuck</a></li>
+			<li><a href="https://utf-8.jp/public/aaencode.html" target="_blank" rel="noopener noreferrer">aaencode</a></li>
+			<li><a href="https://gchq.github.io/CyberChef/" target="_blank" rel="noopener noreferrer">CyberChef</a></li>
+			<li><a href="https://owasp.org/www-community/xss-filter-evasion-cheatsheet" target="_blank" rel="noopener noreferrer">XSS Filter Evasion Sheet</a></li>
+			<li><a href="https://pwnadventure.com/" target="_blank" rel="noopener noreferrer">Pwnie Island</a></li>
+			<li><a href="https://beefproject.com/" target="_blank" rel="noopener noreferrer">BeEF</a></li>
+			<li><a href="https://www.first.org/cvss/calculator/3.1" target="_blank" rel="noopener noreferrer">CVSS</a></li>
+			<li><a href="https://github.com/swisskyrepo/PayloadsAllTheThings/blob/master/Methodology%20and%20Resources/Reverse%20Shell%20Cheatsheet.md" target="_blank" rel="noopener noreferrer">Reverse Shell Cheat Sheet</a></li>
+			<li><a href="https://lolbas-project.github.io/" target="_blank" rel="noopener noreferrer">LOLBAS</a></li>
+			<li><a href="https://www.virustotal.com/gui/home/upload" target="_blank" rel="noopener noreferrer">VirusTotal</a></li>
+			<li><a href="https://x0rb3l.github.io/Cyber-Bookmarks/bookmarks.html" target="_blank" rel="noopener noreferrer">x0rb3l's Cyber Bookmarks</a></li>
+			<li><a href="https://gist.github.com/HarmJ0y/184f9822b195c52dd50c379ed3117993" target="_blank" rel="noopener noreferrer">PowerView</a></li>
+			<li><a href="https://0xffsec.com/handbook/notes/" target="_blank" rel="noopener noreferrer">0xffsec Handbook</a></li>
+			<li><a href="https://gtfobins.github.io/" target="_blank" rel="noopener noreferrer">GTFOBins</a></li>
+			<li><a href="https://pauljerimy.com/security-certification-roadmap/" target="_blank" rel="noopener noreferrer">Security Certifications Roadmap</a></li>
+			<li><a href="https://github.com/ytisf/thezoo" target="_blank" rel="noopener noreferrer">theZoo, malware library</a></li>
+			<li><a href="https://crackstation.net/" target="_blank" rel="noopener noreferrer">CrackStation</a></li>
+			<li><a href="https://github.com/gtworek/Priv2Admin" target="_blank" rel="noopener noreferrer">Priv2Admin</a></li>
+			<li><a href="https://mha.azurewebsites.net/" target="_blank" rel="noopener noreferrer">Message Header Analyzer</a></li>
+			<li><a href="https://app.any.run/" target="_blank" rel="noopener noreferrer">Interactive Online Malware Analysis Sandbox</a></li>
+			<li><a href="https://hashcat.net/wiki/doku.php?id=example_hashes" target="_blank" rel="noopener noreferrer">Hashcat example hashes</a></li>
 		</ul>
 		<h2>Hacking Databases</h2>
 		<hr>
 		<ul>
-			<li><a href="https://cve.mitre.org/">CVE</a></li>
-			<li><a href="https://nvd.nist.gov/">NVD</a></li>
-			<li><a href="https://seclists.org/">Seclists</a></li>
-			<li><a href="https://www.exploit-db.com/">Exploit Database</a></li>
-			<li><a href="https://www.soldierx.com/hdb/">Hacker Database</a></li>
-			<li><a href="https://attack.mitre.org/groups/">Hacker Groups</a></li>
-			<li><a href="https://attack.mitre.org/">MITRE ATT&CK</a></li>
+			<li><a href="https://cve.mitre.org/" target="_blank" rel="noopener noreferrer">CVE</a></li>
+			<li><a href="https://nvd.nist.gov/" target="_blank" rel="noopener noreferrer">NVD</a></li>
+			<li><a href="https://seclists.org/" target="_blank" rel="noopener noreferrer">Seclists</a></li>
+			<li><a href="https://www.exploit-db.com/" target="_blank" rel="noopener noreferrer">Exploit Database</a></li>
+			<li><a href="https://www.soldierx.com/hdb/" target="_blank" rel="noopener noreferrer">Hacker Database</a></li>
+			<li><a href="https://attack.mitre.org/groups/" target="_blank" rel="noopener noreferrer">Hacker Groups</a></li>
+			<li><a href="https://attack.mitre.org/" target="_blank" rel="noopener noreferrer">MITRE ATT&CK</a></li>
 		</ul>
 		<h2>Open Source Intelligence</h2>
 		<hr>
 		<ul>
-			<li><a href="https://www.shodan.io/">Shodan</a></li>
-			<li><a href="https://www.iana.org/assignments/service-names-port-numbers/service-names-port-numbers.xhtml">Service Name and Transport Protocol Port Registry</a></li>
-			<li><a href="https://www.faxvin.com/license-plate-lookup">License Plate Lookup</a></li>
-			<li><a href="https://www.arin.net/">American Registry for Internet Numbers</a></li>
+			<li><a href="https://www.shodan.io/" target="_blank" rel="noopener noreferrer">Shodan</a></li>
+			<li><a href="https://www.iana.org/assignments/service-names-port-numbers/service-names-port-numbers.xhtml" target="_blank" rel="noopener noreferrer">Service Name and Transport Protocol Port Registry</a></li>
+			<li><a href="https://www.faxvin.com/license-plate-lookup" target="_blank" rel="noopener noreferrer">License Plate Lookup</a></li>
+			<li><a href="https://www.arin.net/" target="_blank" rel="noopener noreferrer">American Registry for Internet Numbers</a></li>
 		</ul>
 		<h2>YouTube Channels</h2>
 		<hr>
 		<ul>
-			<li><a href="https://www.youtube.com/c/ippsec">IppSec</a></li>
-			<li><a href="https://www.youtube.com/c/thehackerish">thehackerish</a></li>
-			<li><a href="https://www.youtube.com/user/DeviantOllam">DeviantOllam</a></li>
-			<li><a href="https://www.youtube.com/c/TheHatedOne">The Hated One</a></li>
-			<li><a href="https://www.youtube.com/c/hak5">Hak5</a></li>
-			<li><a href="https://www.youtube.com/c/HackerSploit">HackerSploit</a></li>
-			<li><a href="https://www.youtube.com/c/TheCyberMentor">The Cyber Mentor</a></li>
-			<li><a href="https://www.youtube.com/c/PracticalNetworking">Practical Networking</a></li>
-			<li><a href="https://www.youtube.com/c/Tib3rius">Tib3rius</a></li>
-			<li><a href="https://www.youtube.com/c/ShannonMorse">Shannon Morse</a></li>
-			<li><a href="https://www.youtube.com/c/RedTeamVillage">Red Team Village</a></li>
-			<li><a href="https://www.youtube.com/c/BlueTeamVillage">Blue Team Village</a></li>
+			<li><a href="https://www.youtube.com/c/ippsec" target="_blank" rel="noopener noreferrer">IppSec</a></li>
+			<li><a href="https://www.youtube.com/c/thehackerish" target="_blank" rel="noopener noreferrer">thehackerish</a></li>
+			<li><a href="https://www.youtube.com/user/DeviantOllam" target="_blank" rel="noopener noreferrer">DeviantOllam</a></li>
+			<li><a href="https://www.youtube.com/c/TheHatedOne" target="_blank" rel="noopener noreferrer">The Hated One</a></li>
+			<li><a href="https://www.youtube.com/c/hak5" target="_blank" rel="noopener noreferrer">Hak5</a></li>
+			<li><a href="https://www.youtube.com/c/HackerSploit" target="_blank" rel="noopener noreferrer">HackerSploit</a></li>
+			<li><a href="https://www.youtube.com/c/TheCyberMentor" target="_blank" rel="noopener noreferrer">The Cyber Mentor</a></li>
+			<li><a href="https://www.youtube.com/c/PracticalNetworking" target="_blank" rel="noopener noreferrer">Practical Networking</a></li>
+			<li><a href="https://www.youtube.com/c/Tib3rius" target="_blank" rel="noopener noreferrer">Tib3rius</a></li>
+			<li><a href="https://www.youtube.com/c/ShannonMorse" target="_blank" rel="noopener noreferrer">Shannon Morse</a></li>
+			<li><a href="https://www.youtube.com/c/RedTeamVillage" target="_blank" rel="noopener noreferrer">Red Team Village</a></li>
+			<li><a href="https://www.youtube.com/c/BlueTeamVillage" target="_blank" rel="noopener noreferrer">Blue Team Village</a></li>
 		</ul>
 		<h2>Books</h2>
 		<hr>
 		<ul>
-			<li><a href=""></a></li>
-			<li><a href=""></a></li>
-			<li><a href=""></a></li>
-			<li><a href=""></a></li>
+			<li><a href="" target="_blank" rel="noopener noreferrer"></a></li>
+			<li><a href="" target="_blank" rel="noopener noreferrer"></a></li>
+			<li><a href="" target="_blank" rel="noopener noreferrer"></a></li>
+			<li><a href="" target="_blank" rel="noopener noreferrer"></a></li>
 		</ul>
 	</body>
 </html>
